--- a/app/views/static/_timeline.html.erb
+++ b/app/views/static/_timeline.html.erb
@@ -43,7 +43,7 @@
                 <h2><%= raw link_to l.secondary_actor.origin_name, winery_path(l.secondary_actor) %></h2>
                 <p class="iw_action"><%= time_line_text(l.event_type, true) %></p>
             </div>
-            <%= render :partial => "share/time_line_wine", :locals => {:l => l} %>
+            <%= render :partial => "share/time_line_winery", :locals => {:l => l} %>
             <% if current_user %>
                 <div class="iw_comment clearfix" style="display:none;">
                     <div class="left">
