--- a/app/views/wineries/_follower.html.erb
+++ b/app/views/wineries/_follower.html.erb
@@ -1,6 +1,6 @@
 <div class="sidebox">
   <div class="title">
-    <h3>关注该酒庄的人<span class="font12 more"><%= link_to "(共#{@winery.followers_count}人)" %></span></h3>
+    <h3>关注该酒庄的人<span class="font12 more"><%= link_to "(共#{@winery.followers_count}人)", followers_list_winery_path(@winery) %></span></h3>
   </div>
 
   <div class="main">
