酒的profile页面无法加入酒窖； 瀑布流页面“关注”链接指向错误； 用户home更新并同首页保持一致； 用户点击分享到sns网站的图标时无效。

--- a/app/views/share/_time_line_wine.html.erb
+++ b/app/views/share/_time_line_wine.html.erb
@@ -1,22 +1,22 @@
 <!-- 关注的酒被评论 -->
-<% if l.event_type == "new_comment" %>
+<% if event_type == "new_comment" %>
     <div class="iw_main">
         <ul>
-            <% l.secondary_actor.comments.recent(6).each do |comment|%>
+            <% secondary_actor.comments.recent(6).each do |comment|%>
                 <%= render :partial => "share/short_comment", :locals => {:comment => comment} %>
             <% end %>
         </ul>
     </div>
     <div class="iw_more iw_more_comment">
-        <%= link_to  wine_comments_path(l.secondary_actor) do %>
-            共<%= l.secondary_actor.all_comments_count %>条评论
+        <%= link_to  wine_comments_path(secondary_actor) do %>
+            共<%= secondary_actor.all_comments_count %>条评论
         <% end %>
     </div>
 <!-- 酒被关注 -->
-<% elsif l.event_type == "new_follow" %>
+<% elsif event_type == "new_follow" %>
     <div class="iw_main">
         <ul>
-            <% l.secondary_actor.follows.recent(6).each do |follow|%>
+            <% secondary_actor.follows.recent(6).each do |follow|%>
                 <li>
                     <div class="left">
                         <%= link_to_user follow.user, user_path(follow.user, :trailing_slash => true), 
@@ -34,24 +34,24 @@
         </ul>
     </div>
     <div class="iw_more iw_more_follow">
-        <%= link_to followers_wine_path(l.secondary_actor) do %>
-            共<%= l.secondary_actor.followers_count  %>人关注
+        <%= link_to followers_wine_path(secondary_actor) do %>
+            共<%= secondary_actor.followers_count  %>人关注
         <% end %>
     </div>
 <!-- 关注的酒被加入酒窖 -->
-<% elsif l.event_type == "add_to_cellar" %>
+<% elsif event_type == "add_to_cellar" %>
     <div class="iw_main">
         <ul>
             <li>
                 <div class="left">
-                    <%= link_to_user l.actor, 
-                                   user_path(l.actor, :trailing_slash => true), 
+                    <%= link_to_user actor, 
+                                   user_path(actor, :trailing_slash => true), 
                                    { :with_avatar => true, :avatar_version => :thumb },
                                    { :size => "30x30"} %>
                 </div>
                 <div class="right">
                     <p class="username">
-                        <%= link_to_user l.actor, user_path(l.actor, :trailing_slash => true) %>
+                        <%= link_to_user actor, user_path(actor, :trailing_slash => true) %>
                     </p>
                 </div>
                 <div class="clear"></div>
@@ -59,6 +59,6 @@
         </ul>
     </div>
     <div class="iw_more">
-        <%= link_to "去看看他的酒窖", cellars_user_path(l.actor, l.actor.cellar)%>
+        <%= link_to "去看看他的酒窖", cellars_user_path(actor, actor.cellar)%>
     </div>
 <% end %>
