--- a/app/views/static/_timeline.html.erb
+++ b/app/views/static/_timeline.html.erb
@@ -1,8 +1,8 @@
 <% @timelines.each do |l| %>
-    <% item_id = get_rand_id(l) %>
+    <% item_id = get_rand_id(l.secondary_actor_type, l.secondary_actor_id) %>
     <% if l.secondary_actor_type == "Wines::Detail" %> 
         <div class="iw item" id="<%= item_id %>">
-        <%= render :partial => "share/follow_and_comment_button", :locals => {:parent => l.secondary_actor, :item_id => item_id} %>
+          <%= render :partial => "share/follow_and_comment_button", :locals => {:parent => l.secondary_actor, :item_id => item_id} %>
             <div class="iw_img">
                 <%= link_to wine_waterfall_image_tag(l.secondary_actor, :thumb_name => :middle), wine_path(l.secondary_actor) %>
             </div>
@@ -15,7 +15,8 @@
                 </h2>
                 <p class="iw_action"><%= time_line_text(l.event_type) %></p>
             </div>
-            <%= render :partial => "share/time_line_wine", :locals => {:l => l} %>
+            <%= render :partial => "share/time_line_wine", 
+                        :locals => {:event_type => l.event_type, :secondary_actor => l.secondary_actor, :actor => l.actor} %>
             <% if current_user %>
                 <div class="iw_comment clearfix" style="display:none;">
                     <div class="left">
@@ -43,7 +44,8 @@
                 <h2><%= raw link_to l.secondary_actor.origin_name, winery_path(l.secondary_actor) %></h2>
                 <p class="iw_action"><%= time_line_text(l.event_type, true) %></p>
             </div>
-            <%= render :partial => "share/time_line_winery", :locals => {:l => l} %>
+            <%= render :partial => "share/time_line_winery", 
+                   :locals => {:event_type => l.event_type, :secondary_actor => l.secondary_actor} %>
             <% if current_user %>
                 <div class="iw_comment clearfix" style="display:none;">
                     <div class="left">
