--- a/app/views/comments/share/_comment_sns.html.erb
+++ b/app/views/comments/share/_comment_sns.html.erb
@@ -43,6 +43,15 @@
 	function openSns(settings){
 		window.open(settings.url, "popUp", settings.style);
 	}
+
+	function switch_image(src, type){
+		var image_on = new RegExp('_on');
+		if (image_on.test(src)){
+			return ("/assets/icon/" + type + "_s_off.png");
+		}else{
+			return ("/assets/icon/" + type + "_s_on.png");
+		}
+	}
 	$("span.sns_switch").click(function(){
 		var type = $(this).attr('class');
 	    var patt_weibo = new RegExp("weibo");
@@ -58,13 +67,13 @@
 			}
 			return false;
 		}else{
-			console.log('non_connect');
+			var src = $("img", this).attr('src');
 			if (patt_weibo.test(type)){
-				$("img", this).toggleAttr('src', "/assets/icon/weibo_s_on.png", "/assets/icon/weibo_s_off.png");
+				$("img", this).attr('src', switch_image(src, 'weibo'));
 			}else if(patt_douban.test(type)){
-				$("img", this).toggleAttr('src', "/assets/icon/douban_s_on.png", "/assets/icon/douban_s_off.png");
+				$("img", this).attr('src', switch_image(src, 'douban'));
 			}else if(patt_qq.test(type)){
-				$("img", this).toggleAttr('src', "/assets/icon/tencen_s_on.png", "/assets/icon/tencen_s_off.png");
+				$("img", this).attr('src', switch_image(src, 'tencen'));
 			} 
 			$("input", this).toggleDisabled();
 		}
