--- a/app/views/home/_timeline.html.erb
+++ b/app/views/home/_timeline.html.erb
@@ -1,178 +1,85 @@
 <% unless @timelines.nil? %>
-<% @timelines.each do |l| %>
-	 <!-- 关注的是酒 -->
-	 <% if l.ownerable_type == "Wines::Detail" %>
-		<!-- 关注的酒被评论 -->
-		<% if l.event_type == "new_comment" %>
-		<div class="iw item">
-      	<div class="iw_img">
-					<%= link_to wine_waterfall_image_tag(l.receiverable, :thumb_name => :middle), wine_path(l.receiverable) %>
-				</div>
-          <div class="iw_info">
-              <h1>
-								<%= raw wine_name_zh_link(l.receiverable.cname, l.receiverable) %>
-							</h1>
-              <h2>
-					      <%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %>
-							</h2>
-              <p class="iw_action">有了新评论</p>
-          </div>
-          <div class="iw_main">
-          	<ul>
-							 <% l.receiverable.comments.recent(6).each do |comment|%>
-              	<li>
-                  	<div class="left">
-											<%= link_to_user comment.user, 
-                                       user_path(comment.user, :trailing_slash => true), 
-                                       {:with_avatar => true, :avatar_version => :thumb}, 
-                                       {:width => 30, :height => 30} %>
-										</div>
-                      <div class="right">
-                      	<p class="username">
-													<%= link_to_user comment.user, user_path(comment.user, :trailing_slash => true) %>
-												</p>
-                          <p class="content"><%= comment.body %></p>
-                      </div>
-                      <div class="clear"></div>
-                  </li>
-                <% end %>
-             </ul>
-          </div>
-          <div class="iw_more">
-						<%= link_to  wine_comments_path(l.receiverable) do %>
-						共<%= l.receiverable.comments_count %>条评论
-						<% end %>
-						</div>
-    </div>
-		<!-- 关注的酒被加入酒窖 -->
-		<% elsif l.event_type == "add_to_cellar" %>
-		<div class="iw item">
-      	<div class="iw_img">
-					<%= link_to wine_waterfall_image_tag(l.receiverable, :thumb_name => :middle), wine_path(l.receiverable) %>
-				</div>
-          <div class="iw_info">
-            <h1>
-							<%= raw wine_name_zh_link(l.receiverable.cname, l.receiverable)%>
-						</h1>
-            <h2>
-				      <%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %>
-						</h2>							
-              <p class="iw_action">有人把它加入了酒窖</div>
-          <div class="iw_main">
-          	<ul>
-              	<li>
-                  	<div class="left">
-											<%= link_to_user l.timeline_event.actor, 
-                                       user_path(l.timeline_event.actor, :trailing_slash => true), 
-                                       {:with_avatar => true, :avatar_version => :thumb},
-                                       {:size => "30x30"} %>
-										</div>
-                      <div class="right">
-                      	<p class="username">
-                       	<%= link_to_user l.timeline_event.actor, user_path(l.timeline_event.actor, :trailing_slash => true) %>
-												</p>
-                      </div>
-                      <div class="clear"></div>
-                  </li>
-              </ul>
-          </div>
-          <div class="iw_more">
-          	<%= link_to "去看看他的酒窖", cellars_user_path(l.timeline_event.actor, l.timeline_event.actor.cellar)%>
-          </div>
-    </div>
+  <% @timelines.each do |l| %>
+    <% item_id = get_rand_id(l.receiverable_type, l.receiverable_id) %>
+  	 <!-- 关注的是酒 -->
+  	<% if l.receiverable_type == "Wines::Detail" %>
+      <div class="iw item" id="<%= item_id %>">
+        <%= render :partial => "user", :locals => {:l => l} %>
+        <%= render :partial => "share/follow_and_comment_button", :locals => {:parent => l.receiverable, :item_id => item_id} %>
+        <div class="iw_img">
+          <%= link_to wine_waterfall_image_tag(l.receiverable, :thumb_name => :middle), wine_path(l.receiverable) %>
+        </div>
+        <div class="iw_info">
+          <h1><%= raw wine_name_zh_link(l.receiverable.cname, l.receiverable) %></h1>
+          <h2><%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %></h2>
+          <p class="iw_action"><%= time_line_text(l.event_type) %></p>
+        </div>
+        <%= render :partial => "share/time_line_wine", 
+                    :locals => {:event_type => l.event_type, :secondary_actor => l.receiverable, :actor => l.timeline_event.actor} %>
+        <% if current_user %>
+          <div class="iw_comment clearfix" style="display:none;">
+            <div class="left">
+                <%= link_to_user current_user, user_path(current_user, :trailing_slash => true), 
+                                               {:with_avatar => true, :avatar_version => :thumb},
+                                                {:width => 30, :height => 30, :alt => current_user.username} %>
+            </div>
+            <div class="right">
+                <%= render :partial => "comments/share/ajax_form", 
+                           :locals => {:commentable => l.receiverable,
+                                       :item_id => item_id} %>
+            </div>
+        </div>
+        <% end %>
+      </div>
+    <% end %>
     
-		<% end %>
-		<!-- 如果是关注的用户 -->
-	 <% elsif l.ownerable_type == "User" %>
-
-	 <!-- 关注用户添加了评论 -->
-			<% if l.event_type == "new_comment" %>
-	    <div class="iw item">
-      	<div class="iw_user">
-        	<div class="left">
-						<%= link_to_user l.ownerable, 
-                             user_path(l.ownerable, :trailing_slash => true), 
-                             {:with_avatar => true, :avatar_version => :thumb},
-                             {:size => "30x30"} %>
-						</div>
-            <div class="right">
-                <p class="username">
-                		<%= link_to_user l.ownerable, user_path(l.ownerable, :trailing_slash => true) %>
-                </p>
-                <p class="content">发表了评论</p>
-            </div>
-            <div class="clear"></div>
+    <% if l.receiverable_type == "Winery" %>
+      <div class="iw item" id="<%= item_id %>">
+        <%= render :partial => "user", :locals => {:l => l} %>
+        <%= render :partial => "share/follow_and_comment_button", :locals => {:parent => l.receiverable, :item_id => item_id} %>
+        <div class="iw_img">
+          <%= link_to wine_waterfall_image_tag(l.receiverable, :thumb_name => :middle), winery_path(l.receiverable) %>
         </div>
-        	<div class="iw_img">
-						<%= link_to wine_waterfall_image_tag(l.receiverable, :thumb_name => :middle), wine_path(l.receiverable) %>
-				 </div>
-            <div class="iw_info">
-              <h1>
-								<%= raw wine_name_zh_link(l.receiverable.cname, l.receiverable) %>
-							</h1>
-              <h2>
-					      <%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %>
-							</h2>
-            </div>
-            <div class="iw_main">
-            	<ul>
-                	<li>
-					        	<div class="left">
-											<%= link_to_user l.ownerable, 
-                                       user_path(l.ownerable, :trailing_slash => true), 
-                                       {:with_avatar => true, :avatar_version => :thumb},
-                                       {:size => "30x30"} %>
-											</div>
-                        <div class="right">
-					                <p class="username">
-					                		<%= link_to_user l.ownerable, user_path(l.ownerable, :trailing_slash => true) %>
-					                </p>
-                            <p class="content"></p>
-                        </div>
-                        <div class="clear"></div>
-                    </li>
-                 </ul>
-            </div>
-      </div>
-				<!-- 关注用户添加了酒到酒窖 -->
-			<% elsif l.event_type == "add_to_cellar" %>
-			<div class="iw item">
-      	<div class="iw_user">
-        	<div class="left">
-		<%= link_to_user l.timeline_event.actor, 
-                     user_path(l.timeline_event.actor, :trailing_slash => true), 
-                    {:with_avatar => true, :avatar_version => :thumb},
-                    {:size => "30x30"} %>
-	  </div>
-            <div class="right">
-                <p class="username">
-                		<%= link_to_user l.timeline_event.actor, user_path(l.timeline_event.actor, :trailing_slash => true) %>
-                </p>
-                <p class="content">把它酒加入了酒窖</p>
-            </div>
-            <div class="clear"></div>
+        <div class="iw_info">
+          <h1><%= raw link_to l.receiverable.name_zh, winery_path(l.receiverable) %></h1>
+          <h2><%= raw link_to l.receiverable.origin_name, winery_path(l.receiverable) %></h2>
+          <p class="iw_action"><%= time_line_text(l.event_type, true) %></p>
         </div>
-        	<div class="iw_img">
-						<%= link_to wine_waterfall_image_tag(l.receiverable, :thumb_name => :middle), wine_path(l.receiverable) %>	
-					</div>
-            <div class="iw_info">
-              <h1>
-								<%= raw wine_name_zh_link(l.receiverable.cname, l.receiverable) %>
-							</h1>
-              <h2>
-					      <%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %>
-							</h2>
+        <%= render :partial => "share/time_line_winery", 
+                   :locals => {:event_type => l.event_type, :secondary_actor => l.receiverable} %>
+        <% if current_user %>
+          <div class="iw_comment clearfix" style="display:none;">
+            <div class="left">
+              <%= link_to_user current_user, user_path(current_user, :trailing_slash => true), 
+                                                 {:with_avatar => true, :avatar_version => :thumb},
+                                                  {:width => 30, :height => 30, :alt => current_user.username} %>
             </div>
-             <div class="iw_more">
-             	<%= link_to "去看看他的酒窖", cellars_user_path(l.timeline_event.actor, l.timeline_event.actor.cellar)%>
-             </div>
+            <div class="right">
+              <%= render :partial => "comments/share/ajax_form", 
+                             :locals => {:commentable => l.receiverable,
+                                         :item_id => item_id} %>
+            </div>
+          </div>
+        <% end %>
       </div>
-      
-			<% end %>
-	 <% end # end User %> 
-  <% end # end Timeline.each %>
-
+    <% end %>
+  <% end %>
 <!-- 不为空 -->
 <% else %> 
  <p> 还有没有数据. </p>
 <% end %>
+
+<%= javascript_include_tag 'waterfall_comment_follow' %>
+<script type="text/javascript" >
+    function setShare(title, url, summary, image_url) {
+        jiathis_config.title = title;
+        jiathis_config.url = url;
+        jiathis_config.summary = summary;
+        jiathis_config.pic = image_url;
+    }
+    var jiathis_config={
+        data_track_clickback:true,
+        hideMore:false
+    }
+</script>
+<script type="text/javascript" src="http://v2.jiathis.com/code_mini/jia.js?uid=1623461" charset="utf-8"></script>
