--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -5,7 +5,7 @@
 <script language="javascript" type="text/javascript">
   $(document).ready(function(){
       $('input.date').datetimepicker({
-        numberOfMonths: 2
+        numberOfMonths: 2,
         minDate: 0
        // maxDate: 30
       });
@@ -33,6 +33,9 @@
   <div class="add_event_step">
     <%= image_tag "common/add_event_step1.gif", :size => "180x22" %>
   </div>
+  <% unless @event.errors.get(:poster).blank? %>
+    <div class="error mt20"><%= @event.errors.get(:poster).join('') %></div>
+  <% end %>
   <div id="stylized" class="myform mb30">
     <%= render 'form' %>
  </div>
@@ -75,6 +78,7 @@
     <%= image_tag "common/add_event_step3.gif", :size => "180x22", :alt => "上传活动海报" %>
   </div>
   <div class="mb30 align_c">
+
     <% if @event.poster.present? %>
       <div class="mb30 align_c">
         <%= image_tag @event.poster_url(:large), :size => '150x225' %>
