--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -80,31 +80,35 @@
        </div>
 
         <div class="event_list">
-          <% @events.each do |event| %>
-            <dl class="clearfix">
-              <dt>
-                <%= link_to event_path(event) do %>
-                  <%= image_tag event.poster_url(:thumb), :size => '100x150', :alt => event.title %>
-                <% end %>
-              </dt>
-              <dd>
+          <% if @events.blank? %>
+           <p>未发现将要进行的活动...</p>
+          <% else %>
+            <% @events.each do |event| %>
+              <dl class="clearfix">
+                <dt>
+                  <%= link_to event_path(event) do %>
+                    <%= image_tag event.poster_url(:thumb), :size => '100x150', :alt => event.title %>
+                  <% end %>
+                </dt>
+                <dd>
                 <span class="type">
                   <%= event_item_tags(event) %>
                 </span>
-                <h2><%= link_to truncate_u(event.title, 29), event_path(event)  %></h2>
-                <div class="info">时间:  <%= event.begin_end_at %><br />
-                  地点:  <%= event.full_address %><br />
-                  组织者：<%= link_to  event.user.username, 
-                      user_path(event.user, :trailing_slash => true) %>
-                </div>
-                <div class="p_count2">
+                  <h2><%= link_to truncate_u(event.title, 29), event_path(event)  %></h2>
+                  <div class="info">时间:  <%= event.begin_end_at %><br />
+                    地点:  <%= event.full_address %><br />
+                    组织者：<%= link_to  event.user.username,
+                                     user_path(event.user, :trailing_slash => true) %>
+                  </div>
+                  <div class="p_count2">
                   <span>
                     <%= event.participants_count %>人参加  |
                     <%= event.followers_count %>人感兴趣
                   </span>
-                </div>
-              </dd>
-            </dl>
+                  </div>
+                </dd>
+              </dl>
+            <% end %>
           <% end %>
         </div>
         <div class="pagination">
