--- a/app/views/events/followers.html.erb
+++ b/app/views/events/followers.html.erb
@@ -74,7 +74,7 @@
                 <dd>
                   <h3> <%= link_to event.title, event_path(event)  %></h3>
                   <div class="info">
-                    <%= event.begin_end_at %>
+                    <%= event.begin_end_at_cn %>
                     <br />
                     <%= event.full_address %>
                     <br />
