--- a/app/views/users/events/index.html.erb
+++ b/app/views/users/events/index.html.erb
@@ -33,7 +33,7 @@
                     <%= event_item_tags(event) %>
                   </span>
                   <h2><%= link_to truncate_u(event.title, 20), event_path(event)  %></h2>
-                  <div class="info">时间:  <%= event.begin_end_at %><br />
+                  <div class="info">时间:  <%= event.begin_end_at_cn %><br />
                     地点:  <%= event.full_address %><br />
                     组织者：<%= link_to  event.user.username, 
                       user_path(event.user, :trailing_slash => true) %>
@@ -74,7 +74,7 @@
                     <%= event_item_tags(event) %>
                   </span>
                   <h2><%= link_to truncate_u(event.title, 20), event_path(event)  %></h2>
-                  <div class="info">时间:  <%= event.begin_end_at %><br />
+                  <div class="info">时间:  <%= event.begin_end_at_cn %><br />
                     地点:  <%= event.full_address %><br />
                     组织者：<%= link_to  event.user.username, 
                       user_path(event.user, :trailing_slash => true) %>
@@ -116,7 +116,7 @@
                       <%= event_item_tags(event) %>
                     </span>
                     <h2><%= link_to truncate_u(event.title, 20), event_path(event)  %></h2>
-                    <div class="info">时间:  <%= event.begin_end_at %><br />
+                    <div class="info">时间:  <%= event.begin_end_at_cn %><br />
                       地点:  <%= event.full_address %><br />
                       组织者：<%= link_to  event.user.username, 
                         user_path(event.user, :trailing_slash => true) %>
