--- a/app/views/users/share/_user_followings.html.erb
+++ b/app/views/users/share/_user_followings.html.erb
@@ -1,35 +1,37 @@
 <% if !@followings.blank? %>
-<ul class="userlist">
-  <% @followings.map_user.each do |user| %>
-<li>
-  <div class="userpic">
-    <%= link_to_user user, 
-		user_path(user.id,:trailing_slash => true), 
-		{:with_avatar => true, :avatar_version => :large}, 
-		{:width => 50, :height => 50} %>
-  </div>
-  <div class="userinfo">
-    <div class="username">
-      <%= link_to_user user, user_path(user,:trailing_slash => true) %> 
-    </div>
-    <div class="userlocation"><%= user.city %></div>
-    <% if is_login_user? @user #  当前访问属于自己的页面 %>
-    <p><span class="cancl_fol">
-     <%= link_to "取消关注", unfollow_user_path(user), :method => :put %> </span>
-   </p>
-     <% if user.is_following current_user.id %>
-        <p> 互相关注 </p>
+  <ul class="userlist">
+    <% @followings.map_user.each do |user| %>
+      <li>
+        <div class="userpic">
+          <%= link_to_user user,
+                           user_path(user.id,:trailing_slash => true),
+                           {:with_avatar => true, :avatar_version => :large},
+                           {:width => 50, :height => 50} %>
+        </div>
+        <div class="userinfo">
+          <div class="username">
+            <%= link_to_user user, user_path(user,:trailing_slash => true) %>
+          </div>
+          <div class="userlocation"><%= user.city %></div>
+          <% if is_login_user? @user #  当前访问属于自己的页面 %>
+            <p>
+              <span class="cancl_fol">
+                <%= link_to "取消关注", unfollow_user_path(user), :method => :put %>
+              </span>
+            </p>
+            <% if user.is_following current_user.id %>
+              <p> 互相关注 </p>
+            <% end %>
+          <% else %>
+            <%= link_to follow_user_path(user), :class => "btn_gray", :method => :put do  %>
+              <span>加关注</span>
+            <% end %>
+          <% end %>
+        </div>
+      </li>
+      <% if (index+1) % 3 === 0 %><div class="clear"></div><% end %>
     <% end %>
-    <% else %>
-    <%= link_to follow_user_path(user), :class => "btn_gray", :method => :put do  %>
-    <span>加关注</span>
-    <% end %>      
-    
-    <% end %>
-  </div>
-</li>
-<% end %>
-</ul>
+  </ul>
 <% else %>
-<p>暂时没有关注的人！</p>
+  <p>暂时没有关注的人！</p>
 <% end %>
