--- a/app/views/admin/wines_registers/_form.html.erb
+++ b/app/views/admin/wines_registers/_form.html.erb
@@ -27,7 +27,11 @@
         </tr>
         <tr>
           <td><%= f.label :wine_style_id %></td>
-          <td><%= f.select :wine_style_id, Wines::Style.all.collect{ |s| [s.name_zh + '/' + s.name_en, s.id] } %></td>
+          <td>
+            <select id="wines_register_wine_style_id" name="wines_register[wine_style_id]">
+               <%= render "share/wine_style_select", :wine_style_id => @wines_register.wine_style_id %>
+            </select> 
+          </td>
         </tr>
         <tr>
           <td><%= f.label :official_site %></td>
