--- a/public/template/add_wine_year_detail_2.html
+++ b/public/template/add_wine_year_detail_2.html
@@ -152,7 +152,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
       </div>
                     <div class="mt10">
                        <label>&nbsp;</label>
-                       <div class="content"><a href="add_wine_success.html" class="btn_gray mr5"><span>提交信息</span></a></div>
+                       <div class="content"><a href="add_wine_success.html" class="btn_gray mr5"><span>提交信息</span></a><a href="add_wine_year_detail_1.html" class="btn_gray mr5"><span>返回上一步</span></a></div>
                     </div>
                    <div class="clear"></div>
               </div>
