密码重置，提交按钮图标显示不出来

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -22,7 +22,7 @@
             </style>
 
             <%= link_to "javascript:void(0);", :class => "float_l ml10 save" do %>
-              <%= image_tag "/assets/waterfall/images/common/btn_submit.jpg", :alt => "登录", :width => "96", :height => "41" %>
+              <%= image_tag "common/btn_submit.jpg", :alt => "登录", :width => "96", :height => "41" %>
             <% end %>
           </div>
           <div class="mt10">
