view/static/agreement.html.erb  出现了一个错别字

--- a/app/views/static/agreement.html.erb
+++ b/app/views/static/agreement.html.erb
@@ -8,7 +8,7 @@
    <li>
        <h2>1. 总则</h2>
        <ul>
-        <li>1.1. 爱红酒（iWine）网站及其相关的移动应用程序（一下简称“爱红酒”）的各项电子服务（以下简称“本站”）的所有权和运营权归本站的开发方：上海兕维信息科技有限公司（以下简称“开发方”）。本站将完全按照其发布的服务条款和操作规则严格执行。开发方有权根据需要不时地制定、修改本协议或各项条款，如本协议有任何变更，开发方将在网站上或其应用程序内刊载公告，通知用户。如用户不同意相关变更，必须停止使用本站服务。经修订的协议一经公布后，立即自动生效。各项条款发布后生效，亦成为本协议的一部分。登录或继续使用本站将表示用户接受经修订的协议。除另行明确声明外，任何使本站的服务范围扩大或功能增强的新内容均受本协议约束。</li>
+        <li>1.1. 爱红酒（iWine）网站及其相关的移动应用程序（以下简称“爱红酒”）的各项电子服务（以下简称“本站”）的所有权和运营权归本站的开发方：上海兕维信息科技有限公司（以下简称“开发方”）。本站将完全按照其发布的服务条款和操作规则严格执行。开发方有权根据需要不时地制定、修改本协议或各项条款，如本协议有任何变更，开发方将在网站上或其应用程序内刊载公告，通知用户。如用户不同意相关变更，必须停止使用本站服务。经修订的协议一经公布后，立即自动生效。各项条款发布后生效，亦成为本协议的一部分。登录或继续使用本站将表示用户接受经修订的协议。除另行明确声明外，任何使本站的服务范围扩大或功能增强的新内容均受本协议约束。</li>
         <li>1.2. 用户必须完全同意所有服务条款并完成相关的注册程序，才能成为本站的正式用户。用户确认：本协议条款是处理双方权利义务的当然约定依据，除非违反国家强制性法律，否则始终有效。</li>
         <li>1.3. 用户可以使用本站提供的各项服务。当用户使用各单项服务时，用户的使用行为视为其对本服务条款以及本站在该单项服务中发出的各类条款、规则、公告的同意。</li>
         <li>1.4. 用户登录本站即代表同意接受来自本站的有关服务、订单等各项内容的电子邮件、海报或者其它法律允许的通讯联系手段。</li>
